Archive2/fe/63d654cc419c91/output
main.cpp:6:26: error: constexpr variable 'N' must be initialized by a constant expression
    static constexpr int N = noElems();
                         ^   ~~~~~~~~~
main.cpp:6:30: note: undefined function 'noElems' cannot be used in a constant expression
    static constexpr int N = noElems();
                             ^
main.cpp:5:26: note: declared here
    static constexpr int noElems() { return C+1; };
                         ^
1 error generated.
